--- a/netlify.toml
+++ b/netlify.toml
@@ -4,6 +4,19 @@
   functions = "netlify/functions"
   publish = "build"
 
+[functions]
+  directory = "functions"
+
+[[redirects]]
+ from = "/api/*"
+ to = "/.netlify/functions/:splat"
+ status = 200
+
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
+
   ## Uncomment to use this redirect for Single Page Applications like create-react-app.
   ## Not needed for static site generators.
   #[[redirects]]
