--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dompurify": "^2.3.3",
     "emailjs-com": "^3.2.0",
     "faunadb": "^4.4.1",
+    "firebase": "^9.1.2",
     "google-maps-react": "^2.0.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
