--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "google-maps-react": "^2.0.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-firebase-hooks": "^3.0.4",
     "react-icons": "^4.2.0",
     "react-places-autocomplete": "^7.3.0",
     "react-router-dom": "^5.2.0",
